feat(Web): adicionar versão inicial da tela adm.

--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" th:href="@{/css/menulateral.css}"/>
         <link rel="stylesheet" th:href="@{/css/paginaadmin.css}"/>
         <link rel="stylesheet" th:href="@{/css/candidato.css}"/>
+        <link rel="stylesheet" th:href="@{/css/administrador-home.css}"/>
         <title>Titulo do Projeto</title>
 
 
