--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="fragments :: head">        
+    <head th:replace="fragments :: head">  
         <title>Titulo do Projeto</title>
     </head>
     <body class="body-admin">
@@ -12,16 +12,101 @@
             <div id="page-content-wrapper">
                 <div class="container-fluid">
                     <div class="row corpo">
-                        <div class="panel panel-default welcome-corpo">
-                            <div class="panel-body welcome-panel">
-                                <h1>Projeto<span>Crescer</span></h1>
-                                <h3>Painel de Seleção</h3>
-                                <br/><br/>
-                                <h1 class="glyphicon glyphicon-home" aria-hidden="true"> </h1>
-                                <h3 th:text="${'Olá, ' + user.nome + '!'}"></h3>
-                                <br/>
+
+
+
+
+
+                        <section class="col-sm-12 col-sm-offset-0 col-md-offset-1 col-md-10">
+                            <div class="wizard panel">
+                                <div class="wizard-inner panel-heading">
+                                    <div class="connecting-line"></div>
+                                    <ul class="nav nav-tabs" role="tablist">
+
+                                        <li role="presentation" class="active">
+                                            <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Step 1">
+                                                <span class="round-tab">
+                                                    <i class="glyphicon glyphicon-folder-open"></i>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li role="presentation">
+                                            <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Step 2">
+                                                <span class="round-tab">
+                                                    <i class="glyphicon glyphicon-pencil"></i>
+                                                </span>
+                                            </a>
+                                        </li>
+                                        <li role="presentation">
+                                            <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Step 3">
+                                                <span class="round-tab">
+                                                    <i class="glyphicon glyphicon-picture"></i>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li role="presentation" >
+                                            <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Complete">
+                                                <span class="round-tab">
+                                                    <i class="glyphicon glyphicon-ok"></i>
+                                                </span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <div role="form" class="panel-body">
+                                    <div class="tab-content">
+                                        <div class="tab-pane active" role="tabpanel" id="step1">
+                                            <h3>Etapa 1 - Inscrições</h3>
+                                            <h3>275 Candidatos, até o momento.</h3>
+                                        </div>
+                                        <div class="tab-pane" role="tabpanel" id="step2">
+                                            <h3>Etapa 2 - Provas</h3>
+                                            <h3>75 Provas realizadas.</h3>
+                                        </div>
+                                        <div class="tab-pane" role="tabpanel" id="step3">
+                                            <h3>Etapa 3 - Entrevista</h3>
+                                            <h3>42 Entrevistas realizadas.</h3>
+                                        </div>
+                                        <div class="tab-pane" role="tabpanel" id="complete">
+                                            <h3>Etapa 4 - Seleção</h3>
+                                            <h3>23 Selecionados!</h3>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        </section>
+<!--                        <section>
+                            <div class="panel col-md-offset-1 col-md-5" >
+                                <div class="panel-heading  panel-default">
+
+                                </div>
+                                <div class="panel-body">
+
+                                </div>
+                            </div>
+
+                            <div class="panel col-md-5" >
+                                <div class="panel-heading  panel-default">
+
+                                </div>
+                                <div class="panel-body">
+
+                                </div>
+                            </div>
+                        </section>-->
+
+
+
+
+
+
+
+
+
                     </div>
                 </div>
             </div> 
@@ -31,12 +116,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/fullcalendar.min.js" type="text/javascript"></script>
-        
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/lang/pt-br.js" type="text/javascript"></script>
         <script src="https://cdn.jsdelivr.net/sweetalert2/4.0.6/sweetalert2.min.js" type="text/javascript"></script>  
         <script th:src="@{/js/mainView.js}" type="text/javascript"></script>
         <script th:src="@{/js/calendarioView.js}" type="text/javascript"></script>
         <script th:src="@{/js/script.js}" type="text/javascript"></script>
-        
+
     </body>
 </html>
