--- a/Selecao/Selecao-Web/src/main/resources/templates/_entrevistados.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_entrevistados.html
@@ -1,4 +1,4 @@
-<form class="form-inline form-filtro"  id="pesq" data-url="/candidatos">
+<form class="form-inline form-filtro"  id="pesq" data-url="/entrevistados">
     <div class="input-group col-xs-5 col-sm-5 col-md-2">
         <select class="form-control" id="txtStatus" name="status">
             <option value="" class="optionDisable">Status:</option>
