refactor(script.js): adicionar metodos de post para edição de informação de candidatos(ainda não funcional).

--- a/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
@@ -46,7 +46,7 @@
                     <a th:href="${candidato.urlLinkedin}" target="_blank"><i class="fa fa-linkedin-square candidatos-acoes"></i ></a>
                 </td>
                 <td>
-                    <span class="glyphicon glyphicon-list-alt" th:attr="data-url='/editar-candidato?idCandidato='+${candidato.idCandidato.idCandidato}"></span>           
+                    <span href="#" class="glyphicon glyphicon-list-alt opcao-side-bar" th:attr="data-url='/entrevistas?idCandidato='+${candidato.idCandidato.idCandidato}"></span>           
                 </td>
             </tr> 
         </tbody>
