--- a/Selecao/Selecao-Web/src/main/resources/templates/_editar-candidato.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_editar-candidato.html
@@ -1,4 +1,4 @@
-<div class="col-md-5 col-md-offset-3">
+<!--<div class="col-md-5 col-md-offset-3">
     <form id="edicao-candidato" data-url="/editar-candidato" role="form"  method="POST">
         <input type="number" hidden="hidden" th:value="${candidato.idCandidato.idCandidato}" name="idCandidato" />
         <input type="number" hidden="hidden" th:value="${candidato.idInformacao}" name="idInformacao" />
@@ -44,4 +44,4 @@
         </div>
         <button type="submit" class="btn btn-default">Salvar</button>
     </form>
-</div> 
+</div> -->
