--- a/Selecao/Selecao-Web/src/main/resources/templates/_entrevistados.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_entrevistados.html
@@ -1,4 +1,5 @@
-<form class="form-inline form-filtro"  id="pesq" data-url="/entrevistados">
+<form class="form-inline form-filtro"  id="pesq" th:attr="data-page=${pagina}" data-url="/entrevistados">
+    <input name="page"  type="hidden" class="input-pagina"/> 
     <div class="input-group col-xs-5 col-sm-5 col-md-2">
         <select class="form-control" id="txtStatus" name="status">
             <option value="" class="optionDisable">Status:</option>
@@ -40,3 +41,5 @@
         </tbody>
     </table>
 </div>
+<button  th:disabled="${entrevistas.first}" class="btn-paginacao btn btn-default" data-url="/entrevistados" href="#" th:attr="data-page= ${entrevistas.first} ? null : ${pagina}-1">Anterior</button>
+<button th:disabled="${entrevistas.last}" class="btn-paginacao btn btn-default" data-url="/entrevistados" href="#" th:attr="data-page= ${entrevistas.last} ? null : ${pagina}+1">Próximo</button>
