--- a/Selecao/Selecao-Web/src/main/resources/templates/FormConfirmarInscricao.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/FormConfirmarInscricao.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
         <link rel="stylesheet" th:href="@{/css/client-side.css}"/>
         <title>Titulo do Projeto</title>
     </head>
