--- a/Selecao/Selecao-Web/src/main/resources/templates/Sucesso.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Sucesso.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>    
-        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
         <link rel="stylesheet" th:href="@{/css/login.css}"/>
         <title>Titulo do Projeto</title>
     </head>
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
+        <script th:src="@{/js/jquery-2.2.4.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/script.js}" type="text/javascript"></script>
     </body>
