--- a/Selecao/Selecao-Web/src/main/resources/templates/_agendamento.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_agendamento.html
@@ -1,12 +1,21 @@
 <div id='calendar'></div>
 
 <div id='modal-criar-novo-evento' hidden="hidden">
-    <div class="form-group">
-        <label for="usr">Titulo:</label>
-        <input type="text" class="form-control titulo"/>
-    </div>
-    <div class="form-group">
-      <label for="tipo">Tipo:</label>
-      <input type="text" class="form-control tipo"/>
-    </div>
+    <form>
+        <div class="form-group">
+            <label for="evento">Tipo de evento:</label>
+            <select class="form-control novo-evento-tipo">
+                <option>Selecione o tipo</option>
+                <option>Grupo de provas</option>
+                <option>Entrevista de candidato</option>
+            </select>
+        </div>
+        <div class="form-group grupo-titulo" hidden="hidden">
+            <label for="titulo" class="label-titulo"></label>
+            <input type="text" class="form-control input-titulo"/>
+        </div>
+        <div>
+            <span class="range-tempo-evento"></span>
+        </div>
+    </form>
 </div>
