--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/4.0.6/sweetalert2.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/fullcalendar.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/fullcalendar.print.css" media="print"/>
+        <link rel="stylesheet" th:href="@{/css/autocomplete.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/menulateral.css}"/>
         <link rel="stylesheet" th:href="@{/css/paginaadmin.css}"/>
         <link rel="stylesheet" th:href="@{/css/candidato.css}"/>
