feat(Home): adicionar pagina home como partial e link no sidebar.

--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -32,6 +32,9 @@
                     <span>PÁGINAS</span>
                 </li>
                 <li class="li-opcao-menu">
+                    <a href="#" data-url="/administrativo-home" class="opcao-side-bar" ><span class="glyphicon glyphicon-home icon-menu"></span>Inicio</a>
+                </li>
+                <li class="li-opcao-menu">
                     <a href="#" data-url="/candidatos" class="opcao-side-bar" ><span class="glyphicon glyphicon-list icon-menu"></span>Lista de Candidatos</a>
                 </li>
                 <li class="li-opcao-menu">
