--- a/Selecao/Selecao-Web/src/main/resources/templates/adm-home.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/adm-home.html
@@ -3,28 +3,28 @@
         <div class="wizard-inner panel-heading">
             <div class="connecting-line"></div>
             <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active">
+                <li role="presentation" th:class="${counts[0] > 0 and counts[1] == 0 and counts[2] == 0 and counts[3] == 0}? 'active' : ''">
                     <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Inscrições">
                         <span class="round-tab">
                             <i class="glyphicon glyphicon-list"></i>
                         </span>
                     </a>
                 </li>
-                <li role="presentation">
+                <li role="presentation" th:class="${counts[1] > 0 and counts[2] == 0 and counts[3] == 0}? 'active' : ''">
                     <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Provas">
                         <span class="round-tab">
                             <i class="glyphicon glyphicon-pencil"></i>
                         </span>
                     </a>
                 </li>
-                <li role="presentation">
+                <li role="presentation" th:class="${counts[2] > 0 and counts[3] == 0}? 'active' : ''">
                     <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Entrevistas">
                         <span class="round-tab">
                             <i class="glyphicon glyphicon-calendar"></i>
                         </span>
                     </a>
                 </li>
-                <li role="presentation" >
+                <li role="presentation" th:class="${counts[3] > 0}? 'active' : ''">
                     <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Selecionados">
                         <span class="round-tab">
                             <i class="glyphicon glyphicon-ok"></i>
@@ -35,19 +35,19 @@
         </div>
         <div role="form" class="panel-body">
             <div class="tab-content">
-                <div class="tab-pane active" role="tabpanel" id="step1">
+                <div th:class="${counts[0] > 0 and counts[1] == 0 and counts[2] == 0 and counts[3] == 0}? 'tab-pane active' : 'tab-pane'" role="tabpanel" id="step1">
                     <h3>Etapa 1 - Inscrições</h3>
                     <h3 th:text="${counts[0] + ' Candidatos, até o momento.'}"></h3>
                 </div>
-                <div class="tab-pane" role="tabpanel" id="step2">
+                <div th:class="${counts[1] > 0 and counts[2] == 0 and counts[3] == 0}? 'tab-pane active' : 'tab-pane'" role="tabpanel" id="step2">
                     <h3>Etapa 2 - Provas</h3>
                     <h3 th:text="${counts[1] + ' Provas realizadas.'}"></h3>
                 </div>
-                <div class="tab-pane" role="tabpanel" id="step3">
+                <div th:class="${counts[2] > 0 and counts[3] == 0}? 'tab-pane active' : 'tab-pane'" role="tabpanel" id="step3">
                     <h3>Etapa 3 - Entrevista</h3>
                     <h3 th:text="${counts[2] + ' Entrevistas realizadas.'}"></h3>
                 </div>
-                <div class="tab-pane" role="tabpanel" id="complete">
+                <div th:class="${counts[3] > 0}? 'tab-pane active' : 'tab-pane'" role="tabpanel" id="complete">
                     <h3>Etapa 4 - Seleção</h3>
                     <h3 th:text="${counts[3] + ' Selecionados!'}"></h3>
                 </div>
