--- a/Selecao/Selecao-Web/src/main/resources/templates/FormConfirmarInscricao.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/FormConfirmarInscricao.html
@@ -26,8 +26,9 @@
                 <div class="col-md-3"></div>
             </div>
         </div>
-        <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
+        <script th:src="@{/js/jquery-2.2.4.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/script.js}" type="text/javascript"></script>
+        <script th:src="@{/js/confirmar-senha.js}" type="text/javascript"></script>
     </body>
 </html>
