--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" th:href="@{/css/paginaadmin.css}"/>
         <link rel="stylesheet" th:href="@{/css/candidato.css}"/>
         <link rel="stylesheet" th:href="@{/css/administrador-home.css}"/>
+        <link rel="shortcut icon" th:href="@{/img/favicon.ico}"/>
         <title>Titulo do Projeto</title>
 
 
