--- a/Selecao/Selecao-Web/src/main/resources/templates/index.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
         <link rel="stylesheet" th:href="@{/css/client-side.css}"/>
+        <link rel="shortcut icon" th:href="@{/img/favicon.ico}"/>
         <title>Titulo do Projeto</title>
     </head>
     <body class="corpo">
