fix(paginação): arrumar botoes de paginação nas duas telas que exibem candidatos.

--- a/Selecao/Selecao-Web/src/main/resources/templates/_parecer.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_parecer.html
@@ -1,5 +1,5 @@
 <h1 th:text="${entrevista.idCandidato.nome}"></h1>
 <h3>Parecer RH:</h3>
 <p th:text="${entrevista.parecerRh}" ></p>
-<h3>Parecer Tecnico</h3>
+<h3>Parecer Técnico:</h3>
 <p th:text="${entrevista.parecerTecnico}" ></p>  
