--- a/Selecao/Selecao-Web/src/main/resources/templates/_agendamento.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_agendamento.html
@@ -6,8 +6,8 @@
             <label for="evento">Tipo de evento:</label>
             <select class="form-control novo-evento-tipo">
                 <option>Selecione o tipo</option>
-                <option>Grupo de provas</option>
-                <option>Entrevista de candidato</option>
+                <option value="GRUPO_PROVA">Grupo de provas</option>
+                <option value="ENTREVISTA_RH">Entrevista de candidato</option>
             </select>
         </div>
         <div class="form-group grupo-titulo" hidden="hidden">
