--- a/Selecao/Selecao-Web/src/main/resources/templates/FormConfirmarInscricao.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/FormConfirmarInscricao.html
@@ -6,29 +6,90 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
         <link rel="stylesheet" th:href="@{/css/client-side.css}"/>
+        <link rel="stylesheet" th:href="@{/css/administrador-home.css}"/>
+        <link rel="shortcut icon" th:href="@{/img/favicon.ico}"/>
         <title>Titulo do Projeto</title>
     </head>
     <body class="corpo">
-        <div class="container">
+        <div class="container col-md-offset-2 col-md-8 ">
             <div class="row">
-                <div class="col-md-12 fundo-cima">
-                    <h1 class="text-center fonte-laranja fonte-media">Projeto Crescer</h1>
+                <div class="text-center">
+                    <div class="panel-heading" ><img src="/img/logo-escuro.png"/></div>
+                    <h1 class="text-center titulo">Projeto<span class="laranja">Crescer</span></h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6 ">
-                    <div>
-                        <h2 class="text-center fonte-laranja">Confirmar inscrição</h2>
+
+            <div class="divs panel panel-default">
+                <h3 class="panel-heading text-center interessado-header">Confirme seus dados para confirmar sua inscrição</h3>
+
+                <form id="formulario-confirmar" class="panel-body" th:action="@{/email/confirmar-inscricao}" th:object="${informacao}" method="POST">
+                    <input type="hidden" th:value="${informacao.idCandidato.idCandidato}" name="idCandidato.idCandidato"></input>
+                    <div class="form-group">
+                        <label>Nome</label>
+                        <input required="required" class="text-center form-control" type="text" th:value="${informacao.idCandidato.nome}" name="idCandidato.nome"/>
+                        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.nome')}" th:errors="*{idCandidato.nome}"></p>
                     </div>
-                    <div th:include="formulario-candidato"> </div>
-                </div>
-                <div class="col-md-3"></div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input required="required" class="text-center form-control" type="email" th:value="${informacao.idCandidato.email}" name="idCandidato.email"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.email')}" th:errors="*{idCandidato.email}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Instituição de Ensino</label>
+                        <input required="required" class="text-center form-control" type="text" th:value="${informacao.idCandidato.instituicaoEnsino}" name="idCandidato.instituicaoEnsino"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.instituicaoEnsino')}" th:errors="*{idCandidato.instituicaoEnsino}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Curso</label>
+                        <input required="required" class="text-center form-control" type="text" th:value="${informacao.idCandidato.curso}" name="idCandidato.curso"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.curso')}" th:errors="*{idCandidato.curso}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Previsao Formatura</label>
+                        <input required="required" class="text-center form-control" type="text" th:value="${informacao.idCandidato.previsaoFormatura}" name="idCandidato.previsaoFormatura" placeholder="aaaa/mm"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.previsaoFormatura')}" th:errors="*{idCandidato.previsaoFormatura}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Telefone</label>
+                        <input required="required" class="text-center form-control" type="text" th:value="*{telefone}" name="telefone"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('telefone')}" th:errors="*{telefone}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Data de nascimento</label>
+                        <input required="required" class="text-center form-control" type="text" th:value="*{dataNascimento}" name="dataNascimento" placeholder="dd/mm/aaaa"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('dataNascimento')}" th:errors="*{dataNascimento}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Cidade</label>
+                        <input required="required" class="text-center form-control" type="text" th:value="*{cidade}" name="cidade"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('cidade')}" th:errors="*{cidade}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Linkedin URL</label>
+                        <input required="required" class="text-center form-control" type="text" th:value="*{urlLinkedin}" name="urlLinkedin"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('urlLinkedin')}" th:errors="*{urlLinkedin}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Senha</label>
+                        <input required="required" id="password" class="text-center form-control" type="password" name="senha"/> 
+                        <p class="text-danger" th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Confirmar senha</label>
+                        <input required="required"  id="confirm_password" class="text-center form-control" type="password" /> 
+                        <span id='message'></span>
+                    </div>
+                    <div class="form-group"><br/>
+                        <button type="submit" value="Sign In"  class=" botao-submit">Enviar</button>
+                    </div>
+                </form>
             </div>
+            <div class="col-md-1"></div>
         </div>
+
         <script th:src="@{/js/jquery-2.2.4.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
-        <script th:src="@{/js/script.js}" type="text/javascript"></script>
+        <script src="https://www.google.com/recaptcha/api.js?hl=pt-BR" type="text/javascript"></script>
         <script th:src="@{/js/confirmar-senha.js}" type="text/javascript"></script>
     </body>
 </html>
